@@ -15,6 +15,7 @@ x2gokdrive (0.0.0.1-0x2go1) UNRELEASED; urgency=medium
     - send a recive feature versions.
     - reinit client version on new connection and awaka sending thread when client version recieved.
     - support sending and recieving selections on demand. Support reading and writing INCR properties.
+    - move declaration of RemoteHostVars from x2gokdriveremote.h to x2gokdriveremote.c.
 
   [ Mihai Moldovan ]
   * Initial release:
